# jobmanager

./: .gitignore  .pre-commit-config.yaml  README.md  psi4_guide.md  pyproject.toml
.github/: codecov.yaml
.github/workflows/: CI.yaml  python-linter.yaml
jobmanager/: README.md  classes.py  configure_example.txt  constants.py  io.py  job.py  manager_io.py  moltools.py  populate_jobs.py  read_outfile.py  readme  recovery.py  resub.py  sp_config_example.json  tools.py
jobmanager/Classes/: calc.py  manager.py  read_outfile.py  system.py
jobmanager/io/: __init__.py  io.py  molden.py
jobmanager/legacy/: classes.py  configure_example.txt  moltools.py  recovery.py  resub.py  sp_config_example.json
jobmanager/legacy/psi4_utils/: derivative.py  jobscript.sh  loop_derivative_jobs.py  loop_run.py  molden2psi4wfn.py  (+2 more)
jobmanager/psi4_utils/: TCtoPsi4.py  derivative.py  derivative_utils.py  jobscript.sh  loop_derivative_jobs.py  loop_rescue.py  loop_run.py  molden2psi4wfn.py  molden2psi4wfn_spherical.py  molden2wfn.py  mp2_noon.py  new_loop_derivative_jobs.py  new_loop_rescue.py  new_loop_run.py  psi4_utils.py  run.py  run_scripts.py  run_utils.py  stable_run.py  test.wfn
psi4_example_run/: configure  psi4_config.json
psi4_example_run/fe2_nh3_6/: charge-spin-info.json  opt_geo.xyz
tests/: test_calc.py  test_cli.py  test_io.py  test_io_read_outfile.py  test_job.py  test_load_molden.py  test_manager.py  test_psi4_utils.py  test_read_outfile.py  test_system.py  test_tools.py  test_walk.py
tests/testresources/: fe_2_h2o_6_s_5.xyz
tools/conda_envs/: jobmanager.yaml
(+48 files in other folders)
