[project]
name = 'jobmanager'
version = '0.0.1'
description = 'Package manage quantum chemistry calculations on high performance computing cluster.'
authors = []
dependencies = ['numpy', 'pandas', 'iodata']

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
jobmanager = "jobmanager.resub:main"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-resource-path"]